# prelegal

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  catalog.json
.claude/: CLAUDE.md  settings.local.json
backend/: db.py  document_registry.py  main.py  pyproject.toml
backend/routers/: auth.py  chat.py  documents.py  history.py
backend/tests/: test_auth.py  test_chat.py  test_documents.py  test_history.py
frontend/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/app/: chat-api.ts  chat-panel.tsx  globals.css  layout.tsx  nda-pdf.tsx  nda-preview.tsx  nda-template.ts  page.tsx  signature-panel.tsx
frontend/app/components/: chat-panel.tsx  doc-preview.tsx  generic-pdf.tsx  signature-block.tsx
frontend/app/editor/: page.tsx
frontend/app/lib/: chat-api.ts  doc-types.ts  template-renderer.ts
frontend/app/login/: page.tsx
frontend/tests/: nda-pdf.test.tsx  nda-template.test.ts  page.test.tsx  template-renderer.test.ts
scripts/: start-linux.sh  start-windows.sh  stop-windows.sh
templates/: LICENSE.txt
