[project]
name = "prelegal-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.115",
    "litellm>=1.83.9",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.30",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
